Consider overall percentage when emitting battery warning on startup

Otherwise you might have your session shutdown after logging in when the first battery
that was detected happened to be below the critical threshold.

REVIEW: 123704
BUG: 347470
FIXED-IN: 5.3.1